--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -33,6 +33,7 @@ body
 @import './components/_scoreOverlay.styl';
 @import './components/_lineupOverlay.styl';
 @import './components/_playerInfoOverlay.styl';
+@import './components/_productOverlay.styl';
 @import './components/_replayer.styl';
 @import './components/_highlights.styl';
 @import './components/_clickIndicator.styl';
