--- a/www/app/stylus/components/_productOverlay.styl
+++ b/www/app/stylus/components/_productOverlay.styl
@@ -3,7 +3,7 @@
     width: 200px;
     height: 200px;
     bottom: 0;
-    right: 0px;
+    right: -40px;
     border-radius: 4px;
     background-color: rgba(255,255,255,.5);
     -webkit-transition: 0.5s all;
@@ -15,6 +15,10 @@
     &.isShowing {
         transform: translate(-50%, -50%) scale(1);
         opacity: 1;
+    }
+    &.portrait {
+        bottom: inherit;
+        top: 112px;
     }
 
     img {
