LIVE-163 Scrollbar should now be under the filter thumbnails. Icons are also smaller now

--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -7,6 +7,7 @@
   .horizontalScrollInner
     margin: 0
     white-space: nowrap;
+    padding-bottom: 12px
 
 @media (min-width: 1000px)
   .horizontalScroll
@@ -22,7 +23,7 @@
 //Filter tabs only
 .filterTabs.horizontalScroll
   .horizontalScrollInner
-    margin: 20px 0 17px 0 //bottom-margin be more than .items bottom-padding
+    margin: 20px 0 6px 0;//bottom-margin be more than .items bottom-padding
     text-align:left
     .items
       border-bottom:solid 1px $color_lightGrey
