--- a/www/app/stylus/components/_header.styl
+++ b/www/app/stylus/components/_header.styl
@@ -123,8 +123,10 @@ p.divider{
   padding: 35px 10px 10px;
   font-weight:bold;
   border-bottom:solid 1px rgba(250, 250, 250, 0.5);
-  display:inline-block
-  
+  display: block;
+  margin: 0 auto;
+  width: 140px;
+  font-size: 20px;
   color: #efefef;
 }
 
