--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -144,7 +144,7 @@
     .close-button {
         position: absolute;
         top: 20px;
-        left: 20px;
+        right: 20px;
         z-index: 2000;
         //font-size: 32px;
     }
