Hides the fullscreen button in the videos, forcing them to rotate the screen which is correct behavior, until we have a rotate button.

--- a/www/app/stylus/components/_video.styl
+++ b/www/app/stylus/components/_video.styl
@@ -24,6 +24,10 @@
 .IMRPlayer .video-react .video-react-control-bar
     height: 3em
 
+@media(max-width: $big_screen)
+    .video-react .video-react-fullscreen-control
+        display:none
+
 .IMRPlayer .video-react
     font-size: 24px
     font-family: Roboto, sans-serif
