added some common styles and override file to font awesome

--- a/www/app/stylus/components/_common.styl
+++ b/www/app/stylus/components/_common.styl
@@ -40,3 +40,8 @@
 //	overflow:hidden!important
 //	touch-action: none!important
 //	position: fixed!important
+
+.white
+	color:white
+.black
+	color:black
