--- a/www/app/stylus/components/_chat.styl
+++ b/www/app/stylus/components/_chat.styl
@@ -6,6 +6,7 @@
     height: 100%;
     position: relative;
     padding-left: 20px;
+    box-sizing: border-box
 
     &:before {
         content: '';
@@ -54,9 +55,9 @@
         top: 0;
         left: 0;
         width: 100%;
-        height: 20px;
         padding: 20px;
         background: #333;
+        box-sizing: border-box
     }
 
     .chat-messages {
@@ -67,6 +68,7 @@
         width: 100%;
         overflow: scroll;
         margin-top: 0;
+        box-sizing: border-box
 
         li {
             margin-bottom: 30px;
