--- a/www/app/stylus/components/_penaltyCard.styl
+++ b/www/app/stylus/components/_penaltyCard.styl
@@ -1,6 +1,6 @@
 @keyframes card-show {
     0% {
-        transform: rotateY(450deg);
+        transform: rotateY(180deg);
         width: 42px;
         top: 100%;
         color: red;
@@ -62,9 +62,10 @@
     color: white;
     position: absolute;
     transform-style: preserve-3d;
-    transform: rotateY(450deg);
-    top: 100%;
+    transform: rotateY(180deg);
+    top: 50%;
     left: 10%;
+    z-index: 2500;
 
     span {
         display: inline-block;
