--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -76,8 +76,8 @@
 }
 
 // Time Divider
-.video-react-time-divider {
-    display: none;
+.video-react-time-divider, .video-react-icon-fullscreen {
+    display: none !important;
 }
 
 // Volume
@@ -141,14 +141,20 @@
         }
     }
 
-    .close-button {
+    .close-button, .minimize-button{
         position: absolute;
         top: 20px;
         right: 20px;
         z-index: 2000;
+        color: white;   
+        text-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
         //font-size: 32px;
     }
     
+    .minimize-button {
+        right: auto;
+        left: 20px;
+    }
 }
 
 .close-button {
