LIVE-160 Added Notification System, added notifications to login process

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -23,6 +23,7 @@ body
 @import './components/_chat.styl';
 @import './components/navigation/_mobileMenu.styl';
 @import './components/_modal.styl';
+@import './components/Notifications/_boxNotification.styl';
 
 
 // Second Layer Styles
