LIVE-163 Made new horizontal scroller, and added icons

--- a/www/app/stylus/components/_search.styl
+++ b/www/app/stylus/components/_search.styl
@@ -5,11 +5,13 @@
   border-top: none
   border-left: none
   border-right: none
-  font-size:$font_s
-  padding: 5px
+  font-size:$font_m
+  padding: 6px
   border-bottom: 0;
   background-color:transparent
-  width: 95%
+  width: 80%
+  &:focus
+    background-color:transparent
 
 .searchInput input:active, .searchInput input:focus
   outline: none
