--- a/www/app/stylus/components/form_items_common.styl
+++ b/www/app/stylus/components/form_items_common.styl
@@ -66,6 +66,13 @@ label
         float:right
         font-size: 18px
 
+// input[type=“search”]::-webkit-search-decoration,
+// input[type=“search”]::-webkit-search-cancel-button,
+// input[type=“search”]::-webkit-search-results-button,
+// input[type=“search”]::-webkit-search-results-decoration 
+//   display: none;
+input[type="search"]::-webkit-search-cancel-button
+    display: none
 // select
 
 // select option
