--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -1,60 +1,51 @@
-//Common
+.horizontalScroll-outer
+  overflow: hidden
 .horizontalScroll
-  width:100%
-  text-align:center
   overflow-y: scroll
   white-space: nowrap;
+  position:relative
+  text-align:center
+.horizontalScrollInner
+  margin: 0
+  white-space: nowrap;
+.items
+  padding: 0 20px
+  display:inline
+
+.horizontalScroll-outer.filterTabs
+  height:46px // 15+15+18(padding + padding + font size) = 46
+  border-bottom: solid 1px $color_lightGrey
+.filterTabs .horizontalScroll
+  margin-top: 15px
+  width:100%
+  height:46px
+  position:relative
+  text-align:center
+
+.filterTabs .items
+  padding: 0 20px
+  height: 46px 
+  color: $color_grey
+  &.active
+    color: black
+
+.filterTabs .scroll-bar
+  border-bottom:solid 3px $color_ocean;
+  position:absolute;
+  left: 0
+  bottom:15px
+
+.horizontalScroll-outer.filterTabs.dark
+  border-bottom: solid 1px $color_grey
+  .scroll-bar
+    border-bottom: solid 3px $color_knallbla
   .horizontalScrollInner
-    margin: 0
-    white-space: nowrap;
-    padding-bottom: 12px
-
-@media (min-width: 1000px)
-  .horizontalScroll
-    overflow:auto
-    background-color: transparent
-    .horizontalScrollInner
-      white-space:normal
-      margin: 0
-      padding: 0 2rem
-      text-align:left
-
-
-//Filter tabs only
-.filterTabs.horizontalScroll
-  .horizontalScrollInner
-    margin: 20px 0 6px 0;//bottom-margin be more than .items bottom-padding
-    text-align:left
     .items
-      border-bottom:solid 1px $color_lightGrey
-      display:inline
-      padding: 15px 20px
-      color: $color_grey
-    .items.active
-      color: $color_ocean;
-      border-bottom: solid 2px $color_ocean;
-.filterTabs.horizontalScroll.dark
-  .horizontalScrollInner
-    .items
-      border-bottom: solid 1px $color_grey
       color: $color_lightGrey
     .items.active
       color: #fff
-      border-bottom: solid 2px $color_knallbla
-.filterTabs.horizontalScroll.wide
-  .horizontalScrollInner .items
-    padding: 15px 12.5%
-@media (min-width: 1000px)
-  .filterTabs.horizontalScroll
-    background-color: transparent
-    .items
-      display:inline-block
-      margin:10px
-    .horizontalScrollInner
-      margin: 0
-      white-space:normal
 
-//For circle avatars and other items.
+
 .horizontalScroll
   .label
     margin:5px 0 2px
@@ -75,11 +66,6 @@
     .itemImage
       width: 100%
       white-space:nowrap
-/*
-.circle-overlay
-  position:absolute
-  left:25%
-  max-width: 100%;*/
 
 .circleFilterOverlay
   position:absolute
@@ -87,3 +73,102 @@
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+
+// //Common
+// .horizontalScroll
+//   width:100%
+//   text-align:center
+//   overflow-y: scroll
+//   white-space: nowrap;
+//   .horizontalScrollInner
+//     margin: 0
+//     white-space: nowrap;
+//     padding-bottom: 12px
+
+// @media (min-width: 1000px)
+//   .horizontalScroll
+//     overflow:auto
+//     background-color: transparent
+//     .horizontalScrollInner
+//       white-space:normal
+//       margin: 0
+//       padding: 0 2rem
+//       text-align:left
+
+
+// //Filter tabs only
+// .filterTabs.horizontalScroll
+//   .horizontalScrollInner
+//     margin: 20px 0 6px 0;//bottom-margin be more than .items bottom-padding
+//     text-align:left
+//     .items
+//       border-bottom:solid 1px $color_lightGrey
+//       display:inline
+//       padding: 15px 20px
+//       color: $color_grey
+//     .items.active
+//       color: $color_ocean;
+//       border-bottom: solid 2px $color_ocean;
+// .filterTabs.horizontalScroll.dark
+//   .horizontalScrollInner
+//     .items
+//       border-bottom: solid 1px $color_grey
+//       color: $color_lightGrey
+//     .items.active
+//       color: #fff
+//       border-bottom: solid 2px $color_knallbla
+// .filterTabs.horizontalScroll.wide
+//   .horizontalScrollInner .items
+//     padding: 15px 12.5%
+// @media (min-width: 1000px)
+//   .filterTabs.horizontalScroll
+//     background-color: transparent
+//     .items
+//       display:inline-block
+//       margin:10px
+//     .horizontalScrollInner
+//       margin: 0
+//       white-space:normal
+
+// //For circle avatars and other items.
+// .horizontalScroll
+//   .label
+//     margin:5px 0 2px
+//     font-size:$font_xs
+//     text-overflow: ellipsis;
+//     overflow:hidden
+//   .avatar
+//     margin: 0 10px
+//     white-space: nowrap;
+//   .circleAvatar
+//     text-align: center
+//     max-width:100px
+//     position:relative
+//   .scrollItem
+//     max-width:200px
+//     margin: 0 10px 0 0
+//     text-align:center
+//     .itemImage
+//       width: 100%
+//       white-space:nowrap
+// /*
+// .circle-overlay
+//   position:absolute
+//   left:25%
+//   max-width: 100%;*/
+
+// .circleFilterOverlay
+//   position:absolute
+//   font-size:14px;
+//   left: 50%;
+//   top: 50%;
+//   transform: translate(-50%, -50%);
+
+// .video-scroller
+//   .horizontalScrollInner
+//     margin-left: 5px;
+//     padding-bottom: 0
+// .video-scroller .horizontalScroll .scrollItem
+//   margin: 0 7px 0 0;
+//   img
+//     border:solid 1px rgba(250, 250, 250, 0.5)
