--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -20,7 +20,7 @@
   width:100%
   height:46px
   position:relative
-  text-align:center
+  text-align:left
 
 .filterTabs .items
   padding: 0 20px
@@ -62,7 +62,7 @@
   .scrollItem
     max-width:200px
     margin: 0 10px 0 0
-    text-align:center
+    text-align:left
     .itemImage
       width: 100%
       white-space:nowrap
