LIVE-212 Moved channel images to firebase and icons in a font.

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -4,6 +4,8 @@ body
   font-family: Roboto, sans-serif;
   background: #333;
 
+@import './icomoon.styl';
+
 @import './components/_productcard.styl';
 @import './components/_video.styl';
 @import './components/_overlay.styl';
