LIVE-163 The scrollbar should be hidden now

--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -9,8 +9,8 @@
   margin: 0
   white-space: nowrap;
 .items
-  padding: 0 20px
-  display:inline
+  padding: 15px 20px
+  display:inline-block
 
 .horizontalScroll-outer.filterTabs
   height:46px // 15+15+18(padding + padding + font size) = 46
@@ -66,6 +66,7 @@
     .itemImage
       width: 100%
       white-space:nowrap
+
 
 .circleFilterOverlay
   position:absolute
