--- a/www/app/stylus/components/_channel-page.styl
+++ b/www/app/stylus/components/_channel-page.styl
@@ -5,9 +5,29 @@
         left: 50%;
         transform: translate(-50%, -50%);
         max-width: 40%;
-
+        max-height: 30%;
+        width: auto;
+        -webkit-filter: drop-shadow(5px 5px 5px #222);
+        filter: drop-shadow(5px 5px 5px #222);
     .tile
         width:50%
+
+.channelIcon
+    font-size: 40px
+    margin: 0 10px;
+    
+    .active
+        color:white 
+
+.inline-circle-label 
+    .horizontalScroll 
+        height:80px
+        padding-top:15px
+        .scrollItem
+            text-align: center
+            color: #c7c7c7
+            &.active
+                color: white
 
 @media (min-width: 750px)
     .channel-page
