LIVE-205 Made profile picture upload stable, added ability to change display name

--- a/www/app/stylus/components/_chat.styl
+++ b/www/app/stylus/components/_chat.styl
@@ -57,7 +57,8 @@
         width: 100%;
         padding: 20px;
         background: #333;
-        box-sizing: border-box
+        box-sizing: border-box;
+        z-index: 2000;
     }
 
     .chat-messages {
