--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -5,6 +5,7 @@ body
   background: #333;
 
 @import './icomoon.styl';
+@import './components/common/_editableInput.styl';
 
 @import './components/_productcard.styl';
 @import './components/_video.styl';
