--- a/www/app/stylus/components/_video.styl
+++ b/www/app/stylus/components/_video.styl
@@ -7,6 +7,9 @@
     transition: all 0.2s ease;
     &:hover
         transform:scale(1.05);
+    img
+        height: 100px!important
+        width: auto
 ._grid
 	.videoThumb
 		height:125px
