--- a/www/app/stylus/components/_mainframe.styl
+++ b/www/app/stylus/components/_mainframe.styl
@@ -7,10 +7,9 @@
 	h1 
 		padding-top: 20px
 
-a.rowTitle
+.rowTitle
 	margin: 30px 0 0 10px
 	float: left
-	font-size: 16px;
 	text-decoration: none
 
 .sliderButtons
