--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -1,8 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Libre+Franklin:400,700|Open+Sans:400,600&subset=latin-ext');
 body
   margin: 0;
   padding: 0;
-  font-family: Roboto, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background: #333;
+
+h1, h2, h3, h4, h5, h6
+  font-family: 'Libre Franklin', sans-serif !important;
+
+a
+  text-decoration: none
 
 @import './icomoon.styl';
 @import './components/common/_editableInput.styl';
