LIVE-181 Fiddled with the back button styles in the header to make it clearer of the back buttons intentions

--- a/www/app/stylus/components/_header.styl
+++ b/www/app/stylus/components/_header.styl
@@ -55,7 +55,9 @@
 }
 
 .menuItem .menuItemLabel{
-  padding:12px 0;
+  padding: 9px 0;
+  font-size: 18px;
+  padding-left: 8px;
   display:inline-block;
 }
 
