--- a/www/app/stylus/components/_productOverlay.styl
+++ b/www/app/stylus/components/_productOverlay.styl
@@ -25,13 +25,14 @@
         left: 50%;
         transform: translate(-50%, 0);
         position: absolute;
+        margin-top: 10px;
     }
 
     .product-description {
         font-size: 12px;
         color: white;
         background: rgba(2,12,28,0.7);
-        margin: 10px
+        margin: 10px 10px 40px 10px
         border-radius: 4px
         padding: 2px
         position: absolute
@@ -47,12 +48,32 @@
         width: 20px;
         height: 20px;
         color: #fff;
+        border-radius: 4px;
 
         i {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+        }
+    }
+
+    .buy-btn {
+        background: rgba(2,12,28,0.7);
+        position: absolute;
+        right: 10px;
+        bottom: 10px;
+        height: 20px;
+        padding: 2px;
+        color: #fff;
+        border-radius: 4px;
+
+        i {
+
+        }
+
+        span{
+            font-size: 12px
         }
     }
 
@@ -77,6 +98,16 @@
         color: white;
         padding: 20px 25px;
         box-sizing: border-box;
+    }
+
+    .product-price {
+        position: absolute;
+        left: 10px;
+        bottom: -4px;
+        height: 20px;
+        padding: 2px;
+        color: #fff;
+        font-size: 12px;
     }
 }
 
