LIVE-205 Added gradient and more styling in sport overlay

--- a/www/app/stylus/components/_header.styl
+++ b/www/app/stylus/components/_header.styl
@@ -53,9 +53,8 @@
     margin: 5px !important;
   }
 }
-
 .menuItem .menuItemLabel{
-  padding:12px 0;
+  padding:14px 5px;
   display:inline-block;
 }
 
