--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -75,6 +75,14 @@
   top: 50%;
   transform: translate(-50%, -50%);
 
+.video-scroller
+  .horizontalScroll
+    .scrollItem
+      margin: 0
+      img
+        height:110px
+        width:auto
+
 // //Common
 // .horizontalScroll
 //   width:100%
