--- a/www/app/stylus/components/_search.styl
+++ b/www/app/stylus/components/_search.styl
@@ -28,7 +28,7 @@
 .expandable_searchbar
   .menuItem
     position: absolute!important
-    padding: 5px!important
+    //padding: 5px!important
     opacity: 0!important
     transform: translate(-100%, 0)
     transition: all 0.2s $cubic
