LIVE-205 Added Live tag to street fighter video

--- a/www/app/stylus/components/_common.styl
+++ b/www/app/stylus/components/_common.styl
@@ -42,3 +42,21 @@
 	color:white
 .black
 	color:black
+
+.videoThumb {
+	position: relative;
+	.liveOverlay {
+		position: absolute;
+		z-index: 500;
+		top: -5px;
+		right: 10px;
+		background: #e74c3c;
+		padding: 5px 10px;
+		font-size: 14px;
+
+		p {
+			padding: 0;
+			margin: 0;
+		}
+	}
+}
