--- a/www/app/stylus/components/_productOverlay.styl
+++ b/www/app/stylus/components/_productOverlay.styl
@@ -1,6 +1,6 @@
 .product-overlay {
     position: absolute;
-    width: 200px;
+    width: 220px;
     height: 200px;
     bottom: 0;
     right: -40px;
@@ -29,7 +29,7 @@
     }
 
     .product-description {
-        font-size: 12px;
+        font-size: 11px;
         color: white;
         background: rgba(2,12,28,0.7);
         margin: 10px 10px 40px 10px
@@ -73,7 +73,9 @@
         }
 
         span{
-            font-size: 12px
+            font-size: 11px;
+            display: block;
+            margin: 1px 2px 1px 2px;
         }
     }
 
@@ -107,7 +109,7 @@
         height: 20px;
         padding: 2px;
         color: #fff;
-        font-size: 12px;
+        font-size: 11px;
     }
 }
 
