LIVE-236 Set an initial video, also added a ‘New’ tag to a video for testing

--- a/www/app/stylus/components/_masonry.styl
+++ b/www/app/stylus/components/_masonry.styl
@@ -20,7 +20,7 @@
       top: 0;
       right: 0;
       margin: 10px 10px 0 0
-      background-color: red;
+      background-color: #e74c3c;
       p
         margin: 5px;
     .centerOverlay
