--- a/www/app/stylus/components/_overlayX.styl
+++ b/www/app/stylus/components/_overlayX.styl
@@ -19,7 +19,7 @@
         height: 68.3%
         overflow:auto
         //padding: 30px 20px
-        background: black
+        background: #1f1f1f
         color: $color_smoke
         will-change: transform
         top: 100%
