--- a/www/app/stylus/components/_common.styl
+++ b/www/app/stylus/components/_common.styl
@@ -45,18 +45,23 @@
 
 .videoThumb {
 	position: relative;
-	.liveOverlay {
+	.liveOverlay, .newOverlay {
 		position: absolute;
 		z-index: 500;
-		top: -5px;
+		bottom: 10px;
 		right: 10px;
 		background: #e74c3c;
 		padding: 5px 10px;
 		font-size: 14px;
+		text-shadow:2px 2px 2px rgba(0, 0, 0, .2);
 
 		p {
 			padding: 0;
 			margin: 0;
 		}
+	}
+
+	.newOverlay {
+		background: #3498db;
 	}
 }
