LIVE-187 Aligned recommendations slider with label

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -68,3 +68,8 @@ a
     padding: 12px;
     font-size: 24px;
 }
+
+// To move the recommendations slide on the settings page lower - will be replaced with non-matierial UI switch
+.toggle-recommendations > div > div {
+  margin-top: 20px;
+}
