--- a/www/app/stylus/components/_carousel.styl
+++ b/www/app/stylus/components/_carousel.styl
@@ -316,6 +316,7 @@
 .carouselImageTitle, .imageDescription
   margin: 0
   cursor: pointer
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, .4)
 
 .imageDescription 
   font-size: 12px
