LIVE-235 Changed some css and waits until video starts playing.

--- a/www/app/stylus/components/_header.styl
+++ b/www/app/stylus/components/_header.styl
@@ -185,14 +185,14 @@ p.divider{
 .animMenuIcon.closed.subPage{
   .top{
       transform-origin: top right;
-      transform: rotate(-45deg) translate(2px, 0) scale(0.5, 1);
+      transform: rotate(-45deg) translate3d(2px, 0, 0) scale(0.5, 1);
   }
   .bottom{
       transform-origin: bottom right;
-      transform: rotate(45deg) translate(2px, 0) scale(0.5, 1);
+      transform: rotate(45deg) translate3d(2px, 0, 0) scale(0.5, 1);
   }
   .middle{
-    transform: translate(22px, 0);
+    transform: translate3d(22px, 0px, 0px);
   }
 }
 
