--- a/www/app/stylus/components/_search.styl
+++ b/www/app/stylus/components/_search.styl
@@ -30,7 +30,7 @@
     position: absolute!important
     //padding: 5px!important
     opacity: 0!important
-    transform: translate(-100%, 0)
+    transform: translate3d(-100%, 0,0)
     transition: all 0.2s $cubic
     z-index: 200
     
@@ -43,7 +43,7 @@
     //max-width: 250px
     opacity: 1
     transition: all 0.3s $cubic
-    transform: translate(0, 0)
+    transform: translate3d(0, 0, 0)
     input
       transition: all 0.3s $cubic
       
@@ -51,11 +51,11 @@
 .expandable_searchbar.closed
   .menuItem
     opacity: 1!important
-    transform: translate(0, 0)
+    transform: translate3d(0, 0, 0)
   .searchInput
     width: 0%
     opacity: 0.3
-    transform: translate(-10%, 0)
+    transform: translate3d(-10%, 0, 0)
     input
       opacity:0
 .rightMenu
@@ -75,14 +75,15 @@
   right:0
   top:$top_offset
   bottom: 0//$bottom_offset
-  z-index: 800
+  z-index: 600
   overflow:auto
   background-color:white
-  transition: all 0.5s $cubic
+  transition: all 0.3s $cubic
   .containers
     margin: 14px 0 0 10px
 .searchContainer.close
-    bottom:100%
+    //bottom:100%
+    transform: translate3d(0,-100%,0);
 @media (min-width: $big_screen)
   .searchContainer
     top: $top_offset_desktop
