--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -144,8 +144,9 @@
 
     .close-button, .minimize-button{
         position: absolute;
-        top: 20px;
-        right: 20px;
+        top: 0px;
+        right: 0px;
+        padding: 20px;
         z-index: 2000;
         color: white;   
         text-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
@@ -154,7 +155,7 @@
     
     .minimize-button {
         right: auto;
-        left: 20px;
+        left: 0px;
     }
 }
 
