--- a/www/app/stylus/components/_carousel.styl
+++ b/www/app/stylus/components/_carousel.styl
@@ -317,6 +317,7 @@
   margin: 0
   cursor: pointer
   text-shadow: 2px 2px 2px rgba(0, 0, 0, .4)
+  padding-right: 40px;
 
 .imageDescription 
   font-size: 12px
