--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -66,6 +66,8 @@
     .itemImage
       width: 100%
       white-space:nowrap
+      max-height: 110px;
+      width: auto;
 
 
 .circleFilterOverlay
@@ -78,7 +80,7 @@
 .video-scroller
   .horizontalScroll
     .scrollItem
-      margin: 0
+      //margin: 0
       img
         height:110px
         width:auto
