--- a/www/app/stylus/components/_sportSection.styl
+++ b/www/app/stylus/components/_sportSection.styl
@@ -19,7 +19,7 @@
     right:0
     overflow:auto
     color: #fff
-    background-color: rgba(0, 0, 0, 0.8)
+    background-color: #1f1f1f
     h1
         10px 0
     .avatar
