LIVE-235 Made router animations even smoother. I hope. Also added more soccer teams.

--- a/www/app/stylus/components/_sportSection.styl
+++ b/www/app/stylus/components/_sportSection.styl
@@ -59,3 +59,12 @@
     td:first-child
         width:40%
         font-weight:bold
+
+
+.scrollable-team-logo
+    width: 75px
+    height: 75px
+    margin: 0 5px
+    display: inline-block
+    img
+        max-height:70px
