LIVE-272 Set the transition routes to position absolute instead of mainContent.

--- a/www/app/stylus/components/_mainframe.styl
+++ b/www/app/stylus/components/_mainframe.styl
@@ -30,14 +30,14 @@
 
 //This margin makes room for the header being positioned fixed at top of it.
 
-@media (min-width: 1000px)
-	.mainContent
-		margin: 0
+// @media (min-width: 1000px)
+// 	.mainContent
+// 		margin: 0
 
 
 .mainContent
 	margin-bottom: 100px
 	//margin-top: 48px;
-	position:absolute
+	position:relative;
 	width:100%
 	top: $top_offset
