--- a/www/app/stylus/components/navigation/_mobileMenu.styl
+++ b/www/app/stylus/components/navigation/_mobileMenu.styl
@@ -44,6 +44,11 @@
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: -1;
+
+            @media screen and (min-width: 600px) {
+                top: 15px;
+                width: 60%;
+            }
         }
     }
 
