--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -73,6 +73,7 @@
     left: 10px;
     top: 12px;
     z-index: 2001;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 // Time Divider
