LIVE-172 forcing to native fullscreen mode

--- a/www/app/stylus/components/_productOverlay.styl
+++ b/www/app/stylus/components/_productOverlay.styl
@@ -11,6 +11,7 @@
     -webkit-transform: translate(-50%, -50%) scale(0);
     transform: translate(-50%, -50%) scale(0);
     opacity: 0;
+    z-index: 10000
 
     &.isShowing {
         transform: translate(-50%, -50%) scale(1);
