--- a/www/app/stylus/components/_overlay.styl
+++ b/www/app/stylus/components/_overlay.styl
@@ -56,6 +56,7 @@
     transition: opacity .25s ease-in-out;
     -moz-transition: opacity .25s ease-in-out;
     -webkit-transition: opacity .25s ease-in-out;
+    z-index: 10000
 }
 
 .productThumb:hover {
