--- a/www/app/stylus/components/_overlayX.styl
+++ b/www/app/stylus/components/_overlayX.styl
@@ -48,6 +48,7 @@
 .collapsible
     //border-bottom:solid 1px $color_grey;
     position:relative
+    margin-bottom: 40px
     p
         line-height: 1.2 !important;
         font-size: 16px !important;
