--- a/www/app/stylus/components/navigation/_mobileMenu.styl
+++ b/www/app/stylus/components/navigation/_mobileMenu.styl
@@ -35,17 +35,17 @@
         padding-top: 20px;
        &:before {
             content: '';
-            width: 99%;
-            height: 100%;
+            width: 50px;
+            height: 50px;
             border-radius: 50%;
             background: white;
             position: absolute;
-            top: 20px;
+            top: 10px;
             left: 50%;
             transform: translate(-50%, -50%);
             z-index: -1;
 
-            @media screen and (min-width: 600px) {
+            @media screen and (min-width: 420px) {
                 top: 23px;
                 width: 100px;
                 height: 100px;
