--- a/www/app/stylus/components/navigation/_mobileMenu.styl
+++ b/www/app/stylus/components/navigation/_mobileMenu.styl
@@ -42,7 +42,7 @@
             position: absolute;
             top: 10px;
             left: 50%;
-            transform: translate(-50%, -50%);
+            transform: translateX(-50%);
             z-index: -1;
 
             @media screen and (min-width: 420px) {
