LIVE-173 resized video for some aspect ratios in landscape

--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -169,3 +169,6 @@
 .video-react.video-react-fluid {
     height: 100% !important;
 }
+
+.LANDSCAPE .video-react-controls-enabled 
+    padding-top: 0 !important
