LIVE-138 Handled missing lineup data

--- a/www/app/stylus/components/_lineupOverlay.styl
+++ b/www/app/stylus/components/_lineupOverlay.styl
@@ -9,6 +9,11 @@
     transition: .5s all;
     opacity: 0;
 
+    p {
+        padding-left: 20px;
+        color: white;
+    }
+
     &.isShowing {
         transform: translate(-50%, -50%) skew(-10deg) scale(1);
         opacity: 1;
