--- a/www/app/stylus/components/_playerInfoOverlay.styl
+++ b/www/app/stylus/components/_playerInfoOverlay.styl
@@ -36,6 +36,8 @@
             position: absolute;
             left: 50%;
             height: 100%;
+            width: 100%;
+            object-position: top;
             object-fit: cover;
         }
     }
