LIVE-381 First version of commentary tickers.

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -50,6 +50,8 @@ a
 @import './components/_clickIndicator.styl';
 @import './components/SecondLayer/_emptyOverlay.styl';
 
+@import './components/videoSplash.styl';
+
 // Pages
 @import './components/_profile-page.styl'
 @import './components/_channel-page.styl'
