LIVE-386 Removed Material UI user menu

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -13,6 +13,8 @@ a
 
 @import './icomoon.styl';
 @import './components/common/_editableInput.styl';
+@import './components/common/_shade.styl';
+@import './components/navigation/_userMenu.styl';
 
 @import './components/_productcard.styl';
 @import './components/_video.styl';
