LIVE-381 Now hides the tickers if the lineup is showing.

--- a/www/app/stylus/components/videoSplash.styl
+++ b/www/app/stylus/components/videoSplash.styl
@@ -10,6 +10,7 @@
     box-shadow: 2px 2px 20px 0px rgba(250,250,250,0.2);
     font-weight:bold;
     font-size:13px;
+    float:left;
     .splash-inner
         transform: skew(10deg);
         padding: 5px 10px
