LIVE-395 Added an overlayMotion component for the animations/motion. Moved the functions that check for drag up/down into overlay.jsx. Put preplayoverlay into its own component

--- a/www/app/stylus/components/_overlay.styl
+++ b/www/app/stylus/components/_overlay.styl
@@ -5,9 +5,11 @@
     width: 100% /* Full width (cover the whole page) */
     top:0
     left: 0
-    background-color: white
+    background-color: black
     z-index: 100 /* Specify a stack order in case you're using a different order for other elements*/
     display: none;
+
+
 
     &.isOpen {
         display: block;
