--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -64,6 +64,8 @@ a
 
 @import './components/form_items_common.styl'
 
+@import './components/overlayX/videoControls.styl'
+
 .logged-menu-icon {
   display: inline-block;
     position: relative;
