--- a/www/app/stylus/components/_common.styl
+++ b/www/app/stylus/components/_common.styl
@@ -1,3 +1,5 @@
+.icon-shadow
+	filter: drop-shadow(1px 1px 3px rgba(0,0,0, 0.4));
 .inline
 	display:inline-block
 .floatLeft
@@ -38,30 +40,26 @@
 //	overflow:hidden!important
 //	touch-action: none!important
 //	position: fixed!important
+
 .white
 	color:white
 .black
 	color:black
 
-.scrollItem {
+.scrollItem 
 	position: relative;
-	.liveOverlay, .newOverlay {
-		position: absolute;
-		z-index: 500;
-		bottom: 10px;
-		right: 10px;
-		background: #e74c3c;
-		padding: 5px 10px;
-		font-size: 14px;
-		text-shadow:2px 2px 2px rgba(0, 0, 0, .2);
-
-		p {
+	.liveOverlay, .newOverlay 
+		position: absolute
+		z-index: 500
+		bottom: 10px
+		right: 10px
+		background: #e74c3c
+		padding: 5px 10px
+		font-size: 14px
+		text-shadow:2px 2px 2px rgba(0, 0, 0, .2)
+		p
 			padding: 0;
 			margin: 0;
-		}
-	}
-
-	.newOverlay {
+		
+	.newOverlay
 		background: #3498db;
-	}
-}
