LIVE-394 Fixed gap in videoplayer, switched volume button with highlightsbutton, moved control overlays further down, shrinked progress bar,

--- a/www/app/stylus/components/_highlights.styl
+++ b/www/app/stylus/components/_highlights.styl
@@ -1,7 +1,7 @@
 .highlightsSlider
     position: absolute;
-    bottom: 90px;
-    opacity: 0.8;
+    bottom: 30px;
+    //opacity: 0.8;
     z-index: 2000;
 
 .highlightsSlider .rowTitle
@@ -16,5 +16,5 @@
 
 .highlightsCloseButton
     position: absolute
-    top: 10px
+    top: 0
     right: 10px
