--- a/www/app/stylus/components/overlayX/videoControls.styl
+++ b/www/app/stylus/components/overlayX/videoControls.styl
@@ -1,15 +1,11 @@
 .video-controls
     font-size: 25px;
 
-@media(orientation: portrait)
-    .progressBar
-        margin-bottom:-20px
-
 .progressBar
     .time
         font-family: verdana;
         position: fixed;
-        bottom: 11px;
+        bottom: 12px;
         left: 65px;
         font-size:9px
         color:white
@@ -18,11 +14,22 @@
             left:auto
     .bar
         position: fixed;
-        bottom: 7.5px;
+        bottom: 8px;
 .small-control
     position: fixed
     top: auto
     right: auto
     font-size: 15px
-    bottom: 11px
+    bottom: 12px
     color: #fff
+
+.video-player
+    display:block
+    vertical-align: top
+    box-sizing: border-box;
+    color: #fff;
+    background-color: #000;
+    position:relative;
+    line-height:1;
+    width: 100%;
+    height:100%;
