--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -136,6 +136,26 @@
     }
 }
 
+.step-forward{
+    position: absolute;
+    color: #fff;
+    font-size: 25px;
+    top: 50%;
+    right: 40%;
+    transform: translate(50%, -50%);
+    z-index: 2000;
+}
+
+.step-backward{
+    position: absolute;
+    color: #fff;
+    font-size: 25px;
+    top: 50%;
+    left: 40%;
+    transform: translate(-50%, -50%);
+    z-index: 2000;
+}
+
 .pre-play-overlay {
     height: 100%;
     width: 100%;
