--- a/www/app/stylus/components/_replayer.styl
+++ b/www/app/stylus/components/_replayer.styl
@@ -21,7 +21,8 @@
     width: 320px;
     height: 180px;
     //border-radius: 5px;
-    border: 1px solid rgba(250, 250, 250, 0.5);
+    //border: 1px solid rgba(250, 250, 250, 0.5);
+    box-shadow: 2px 2px 2px rgba(0,0,0, 0.4);
     background: transparent;
     display: flex;
     position: absolute;
