LIVE-415 Folder structure and files refactored to fit structure better

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -31,7 +31,7 @@ a
 @import './components/_poster.styl';
 @import './components/_player.styl';
 @import './components/_drawerMenu.styl';
-@import './components/_overlayX.styl';
+@import './components/_videoOverlay.styl';
 @import './components/_chat.styl';
 @import './components/navigation/_mobileMenu.styl';
 @import './components/_modal.styl';
@@ -52,7 +52,7 @@ a
 @import './components/_clickIndicator.styl';
 @import './components/SecondLayer/_emptyOverlay.styl';
 
-@import './components/videoSplash.styl';
+@import './components/tick.styl';
 
 // Pages
 @import './components/_profile-page.styl'
@@ -64,7 +64,7 @@ a
 
 @import './components/form_items_common.styl'
 
-@import './components/overlayX/videoControls.styl'
+@import './components/VideoOverlay/videoControls.styl' 
 
 .logged-menu-icon {
   display: inline-block;
