--- a/www/app/stylus/components/_videoOverlay.styl
+++ b/www/app/stylus/components/_videoOverlay.styl
@@ -13,7 +13,7 @@
         z-index: 1100
     
 
-    .ox-content 
+    .video-content-container
         position: fixed
         width: 100%
         height: 68.3%
