LIVE-408 Moved player number to not clash with player name in overlay

--- a/www/app/stylus/components/_playerInfoOverlay.styl
+++ b/www/app/stylus/components/_playerInfoOverlay.styl
@@ -73,10 +73,13 @@
 
         .player-info-number {
             position: absolute;
-            top: 15px;
-            right: 20px;
-            font-size: 46px;
+            top: 44px;
+            right: 13px;
+            font-size:32px;
             font-weight: bold;
+            &:before {
+                content: '#';
+            }
         }
     }
 
