--- a/www/app/stylus/components/_lineupOverlay.styl
+++ b/www/app/stylus/components/_lineupOverlay.styl
@@ -106,6 +106,7 @@
         transition: .3s all;
         &.transparent {
             opacity: 0;
+            pointer-events: none;
         }
     }
 
