LIVE-414 Fixed shirts overlaying each other

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -51,6 +51,7 @@ a
 @import './components/_highlights.styl';
 @import './components/_clickIndicator.styl';
 @import './components/SecondLayer/_emptyOverlay.styl';
+@import './components/SecondLayer/_lineupShirtManager.styl';
 
 @import './components/tick.styl';
 
