LIVE-423 Increased padding to hard to click areas on

--- a/www/app/stylus/components/_scoreOverlay.styl
+++ b/www/app/stylus/components/_scoreOverlay.styl
@@ -74,11 +74,13 @@
     }
 
     .team1-name {
-        left: 62px;
+        left: 52px;
+        padding: 20px;
     }
 
     .team2-name {
-        right: 62px;
+        right: 52px;
+        padding: 20px;
     }
 
     .clock {
