--- a/www/app/stylus/components/navigation/_userMenu.styl
+++ b/www/app/stylus/components/navigation/_userMenu.styl
@@ -34,6 +34,10 @@
     will-change: transform;
     transition: .5s transform;
 
+    @media screen and (max-width: 360px) {
+        width: 75%;
+    }
+
     &.is-open {
         transform: translate3d(0%, 0, 0);
     }
@@ -52,6 +56,7 @@
             border-radius: 100%;
             background: #333;
             overflow: hidden;
+            flex: 0 0 54px;
 
             img {
                 width: 100%;
@@ -69,6 +74,7 @@
 
             .user-menu-profile-link {
                 color: rgb(144, 202, 249);
+                font-size: 12px;
             }
         }
         
