--- a/www/app/stylus/components/_horizontalScroll.styl
+++ b/www/app/stylus/components/_horizontalScroll.styl
@@ -48,7 +48,7 @@
 
 .horizontalScroll
   .label
-    margin:5px 0 2px
+    margin:0 0 2px
     font-size:$font_xs
     text-overflow: ellipsis;
     overflow:hidden
