--- a/www/app/stylus/components/tick.styl
+++ b/www/app/stylus/components/tick.styl
@@ -8,9 +8,11 @@
     transform: skew(-10deg);
     background-color: rgba(39, 37, 45, 0.95);
     box-shadow: 2px 2px 20px 0px rgba(250,250,250,0.2);
-    font-weight:bold;
+    font-weight:600;
     font-size:13px;
     float:left;
+    b
+        text-transform: uppercase
     .splash-inner
         transform: skew(10deg);
         padding: 5px 10px
