LIVE-392 moved products to left, added notification popups and initial display of cart WIP

--- a/www/app/stylus/components/_productOverlay.styl
+++ b/www/app/stylus/components/_productOverlay.styl
@@ -3,7 +3,7 @@
     width: 220px;
     height: 260px;
     bottom: -90px;
-    right: -40px;
+    left: 170px;
     border-radius: 4px;
     background-color: rgba(255,255,255,.5);
     -webkit-transition: 0.5s all;
@@ -249,7 +249,7 @@
     bottom: 10px;
     height: 40px 
     width: 40px
-    right: 10px
+    left: 10px
     bottom: 40px
     border-radius: 2px
     background-color: rgba(255, 255, 255, .5)
@@ -298,6 +298,44 @@
     box-shadow: 0 0 0 rgba(204,169,44, 0.4);
     animation: pulse 2s infinite;
     border-radius: 4px 
+}
+
+.cart {
+    position: absolute;
+    width: 80%;
+    height: 80%;
+    bottom: -30%;
+    left: 50%;
+    border-radius: 4px;
+    background-color: rgba(255,255,255,0.5);
+    -webkit-transition: 0.5s all;
+    transition: 0.5s all;
+    -webkit-transform: translate(-50%, -50%) scale(0);
+    transform: translate(-50%, -50%) scale(0);
+    opacity: 0;
+    z-index: 10000;
+    &.show {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
+    }
+
+    .close-btn, .right-btn {
+        background: rgba(2,12,28,0.7);
+        position: absolute;
+        right: 3px;
+        top: 3px;
+        width: 20px;
+        height: 20px;
+        color: #fff;
+        border-radius: 4px;
+
+        i {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+        }
+    }
 }
 
 
