--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -52,19 +52,15 @@ a
 @import './components/_clickIndicator.styl';
 @import './components/SecondLayer/_emptyOverlay.styl';
 @import './components/SecondLayer/_lineupShirtManager.styl';
-
+@import './components/_popups.styl';
 @import './components/tick.styl';
 
 // Pages
 @import './components/_profile-page.styl'
 @import './components/_channel-page.styl'
-
 @import './components/_sportSection.styl'
-
 @import './components/_horizontalScroll.styl'
-
 @import './components/form_items_common.styl'
-
 @import './components/VideoOverlay/videoControls.styl' 
 
 .logged-menu-icon {
