--- a/www/app/stylus/components/_modal.styl
+++ b/www/app/stylus/components/_modal.styl
@@ -5,8 +5,9 @@
     height: 100%;
     top: 100%;
     left: 0;
-    background: rgba(0, 0, 0, .3);
+    //background: rgba(0, 0, 0, .3);
     display: flex;
+    //top: 0;
     transition: .5s top;
 
     &.isOpen {
