LIVE-207 Added skeleton of basketball overlay

--- a/www/app/stylus/components/_popups.styl
+++ b/www/app/stylus/components/_popups.styl
@@ -13,8 +13,10 @@
     transition: 0.5s all;
     opacity: 0;
     z-index: 10000
+    pointer-events: none;
 
     &.show {
         opacity: 1;
+        pointer-events: all;
     }
 }
