--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -15,6 +15,7 @@ a
 @import './components/common/_editableInput.styl';
 @import './components/common/_shade.styl';
 @import './components/navigation/_userMenu.styl';
+@import './components/SecondLayer/_basketballOverlay.styl';
 
 @import './components/_productcard.styl';
 @import './components/_video.styl';
