LIVE-392 working shopping cart WIP

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -48,6 +48,7 @@ a
 @import './components/_lineupOverlay.styl';
 @import './components/_playerInfoOverlay.styl';
 @import './components/_productOverlay.styl';
+@import './components/_shoppingCart.styl';
 @import './components/_replayer.styl';
 @import './components/_highlights.styl';
 @import './components/_clickIndicator.styl';
