LIVE-444 Added a 'toggle ticker' setting in the video settings.

--- a/www/app/stylus/components/form_items_common.styl
+++ b/www/app/stylus/components/form_items_common.styl
@@ -24,6 +24,9 @@ select, input
         outline: none
         background: linear-gradient(#689cc4, #5b8db1);
         color: #efefef
+    &.small
+        font-size: 16px;
+        padding: 10px 15px;
 
 .secondaryBtn
     background: linear-gradient(#cbcbcb, #b0b0b0);
