--- a/www/app/stylus/components/VideoOverlay/videoControls.styl
+++ b/www/app/stylus/components/VideoOverlay/videoControls.styl
@@ -16,9 +16,13 @@
     position: fixed
     top: auto
     right: auto
-    font-size: 15px
-    bottom: 12px
-    color: #fff
+    font-size: 17px
+    padding:10px
+    color: #f7f2f2
+    &.bottom
+        bottom: 0
+    &:active, &:hover
+        color: #fff
 
 .video-player
     display:block
