--- a/www/app/stylus/components/_sportSection.styl
+++ b/www/app/stylus/components/_sportSection.styl
@@ -68,3 +68,9 @@
     display: inline-block
     img
         max-height:70px
+
+.soccer-overlay, .basketball-overlay, .ecommerce-overlay
+    transition: 0.5s all;
+    opacity: 0
+    &.show
+        opacity: 1
