--- a/www/app/stylus/components/VideoOverlay/videoControls.styl
+++ b/www/app/stylus/components/VideoOverlay/videoControls.styl
@@ -18,11 +18,11 @@
     right: auto
     font-size: 17px
     padding:10px
-    color: #f7f2f2
+    color: #fff
     &.bottom
         bottom: 0
     &:active, &:hover
-        color: #fff
+        color: rgb(195, 195, 195);
 
 .video-player
     display:block
