LIVE-327 Moved login to its own page

--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -16,6 +16,7 @@ a
 @import './components/common/_shade.styl';
 @import './components/navigation/_userMenu.styl';
 @import './components/SecondLayer/_basketballOverlay.styl';
+@import './components/pages/_loginPage.styl';
 
 @import './components/_productcard.styl';
 @import './components/_video.styl';
