LIVE-429 Increased space around the play button, and increased its size slightly

--- a/www/app/stylus/components/_player.styl
+++ b/www/app/stylus/components/_player.styl
@@ -144,6 +144,10 @@
     right: 40%;
     transform: translate(50%, -50%);
     z-index: 2000;
+
+    @media screen and (max-width: 420px) {
+        right: 30%;
+    }
 }
 
 .step-backward{
@@ -154,6 +158,10 @@
     left: 40%;
     transform: translate(-50%, -50%);
     z-index: 2000;
+
+    @media screen and (max-width: 420px) {
+        left: 30%;
+    }
 }
 
 .pre-play-overlay {
