--- a/www/app/stylus/components/SecondLayer/_basketballOverlay.styl
+++ b/www/app/stylus/components/SecondLayer/_basketballOverlay.styl
@@ -20,7 +20,7 @@
     height: 100%;
     color: white;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
-    transform: translateX(-100%);
+    transform: translateX(-120%);
     transition: transform .5s;
     will-change: transform;
 
@@ -31,7 +31,11 @@
         overflow: scroll;
 
         li {
-            padding: 20px 0;
+            padding: 15px 20px;
+            background: rgba(0, 0, 0, .4);
+            &:nth-child(2n) {
+                background: rgba(0, 0, 0, .5);
+            }
         }
     }
 
@@ -44,6 +48,25 @@
     left: auto;
     right: 20px;
     text-align: right;
-    transform: translateX(100%);
+    transform: translateX(120%);
 }
 
+.basketball-overlay-center {
+    position: absolute;
+    top: 20px;
+    color: white;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    padding: 10px 15px;
+    background: rgba(0, 0, 0, .4);
+
+    .vs {
+        padding: 0 20px;
+    }
+
+    .basketball-home, .basketball-away {
+        font-weight: bold;
+        font-size: 21px;
+    }
+}
