LIVE-457 Adjusted player info overlay stylings on smaller screens

--- a/www/app/stylus/components/_playerInfoOverlay.styl
+++ b/www/app/stylus/components/_playerInfoOverlay.styl
@@ -127,6 +127,10 @@
             font-size: 18px;
             font-weight: bold;
 
+            @media screen and (max-width: 600px) {
+                font-size: 14px;
+            }
+
             &.player-matches_played {
                 position: absolute;
                 top: 0;
