LIVE-459 Improved replayer with a loader. 10 second count down now starts after the video has started playing

--- a/www/app/stylus/components/_replayer.styl
+++ b/www/app/stylus/components/_replayer.styl
@@ -27,10 +27,15 @@
     display: flex;
     position: absolute;
     bottom: 30px;
-    right: 20px;
+    right: 10px;
+    opacity: 0;
     z-index: 3000;
+    transition: .5s all;
+    pointer-events: none;
     &.open {
-        animation: card-show 12s forwards;
+        opacity: 1;
+        right: 20px;
+        pointer-events: all;
     }
 }
 
