--- a/www/app/stylus/components/_productOverlay.styl
+++ b/www/app/stylus/components/_productOverlay.styl
@@ -98,10 +98,6 @@
         bottom: 0;
         height: 20px;
 
-        i {
-
-        }
-
         span{
             font-size: 12px;
             font-weight: bold;
@@ -282,16 +278,14 @@
     margin: 10px
     padding: 0
     opacity: 0;
+    pointer-events: none;
 }
-
-.shopping-cart.show {
-    opacity: 1;
-}
-
 .shopping-cart.show {
     box-shadow: 0 0 0 rgba(204,169,44, 0.4);
     animation: pulse 2s infinite;
-    border-radius: 4px 
+    border-radius: 4px;
+    opacity: 1;
+    pointer-events: all;
 }
 
 .cart {
