--- a/www/app/stylus/fa-override.styl
+++ b/www/app/stylus/fa-override.styl
@@ -6,3 +6,7 @@
     font-size:64px
 .fa-5x
     font-size:80px
+.fa-spin
+    fa-spin 0.7s infinite linear
+.fa-pulse
+    fa-spin 0.7s infinite steps(8)
