LIVE-461 Slow content loading fixes

--- a/www/app/stylus/components/_channel-page.styl
+++ b/www/app/stylus/components/_channel-page.styl
@@ -25,6 +25,10 @@
         .scrollItem
             text-align: center
             color: #c7c7c7
+            opacity: 1
+            transition: opacity .4s
+            &.hidden
+                opacity: 0
             &.active
                 color: white
 
