--- a/www/app/stylus/main.styl
+++ b/www/app/stylus/main.styl
@@ -14,6 +14,7 @@ a
 @import './icomoon.styl';
 @import './components/common/_editableInput.styl';
 @import './components/common/_shade.styl';
+@import './components/common/_splashScreen.styl';
 @import './components/navigation/_userMenu.styl';
 @import './components/SecondLayer/_basketballOverlay.styl';
 @import './components/pages/_loginPage.styl';
