LIVE-485 opcaity typo

--- a/www/app/stylus/components/VideoOverlay/videoControls.styl
+++ b/www/app/stylus/components/VideoOverlay/videoControls.styl
@@ -36,11 +36,11 @@
     height:100%;
 
 .video-controls
-    opcaity: 1
+    opacity: 1
     transition: 0.3s ease all
 
 .gradient-overlay
-    opcaity: 0.5
+    opacity: 0.5
     z-index: 0
 
 .isWaiting
@@ -50,6 +50,6 @@
             opacity:1
 
 //Takes precedence over isWaiting
-.video-control-overlay .hidden
+.video-control-overlay.hide
     .video-controls, .gradient-overlay
-        opcaity: 0
+        opacity: 0
