LIVE-486 Removed orange outline and set a :active color to the chat button instead.

--- a/www/app/stylus/components/_chat.styl
+++ b/www/app/stylus/components/_chat.styl
@@ -50,6 +50,12 @@
         color: white;
         border: none;
         z-index: 2000;
+        &:focus{
+            outline: none;
+        }
+        &:active{
+            color: #b4dee4;
+        }
     }
 
     .chat-title {
