LIVE-484 Settings overlay is now scrollable

--- a/www/app/stylus/components/SecondLayer/_emptyOverlay.styl
+++ b/www/app/stylus/components/SecondLayer/_emptyOverlay.styl
@@ -10,6 +10,8 @@
     transition: 1s transform;
     will-change: transform;
     color: white;
+    box-sizing: border-box
+    overflow: scroll
 
     &.isOpen {
         transform: translateY(0%);
