--- a/www/app/stylus/components/_sportSection.styl
+++ b/www/app/stylus/components/_sportSection.styl
@@ -69,7 +69,7 @@
     img
         max-height:70px
 
-.soccer-overlay, .basketball-overlay, .ecommerce-overlay, .settings-overlay
+.soccer-overlay, .basketball-overlay, .ecommerce-overlay
     transition: 0.5s all
     opacity: 0
     pointer-events: none
