--- a/www/app/stylus/components/_chat.styl
+++ b/www/app/stylus/components/_chat.styl
@@ -56,6 +56,9 @@
         &:active{
             color: #b4dee4;
         }
+        &[disabled] {
+            color: #666;
+        }
     }
 
     .chat-title {
