LIVE-484 Added a close button to the settings.

--- a/www/app/stylus/components/_popups.styl
+++ b/www/app/stylus/components/_popups.styl
@@ -2,8 +2,8 @@
     position: absolute;
     top: calc(50% - 30px);
     left: 55px;
-    height: 90px;
-    width: 180px;
+    //height: 90px;
+    max-width: 180px;
     color: white;
     font-size: 12px;
     background: rgba(0,0,0,.7);
