LIVE-497 Added room at the bottom of the searchcontainer so when scrolling to the bottom, the image wont be cut off.

--- a/www/app/stylus/components/_search.styl
+++ b/www/app/stylus/components/_search.styl
@@ -74,6 +74,7 @@
   width:100%
   right:0
   top: 0
+  padding-bottom: 100px;
   transform: translate3d(0, $top_offset px, 0);
   bottom: 0//$bottom_offset
   z-index: 800
