LIVE-498 Moved back button to left + top, and changed icon to a left arrow.

--- a/www/app/stylus/components/_playerInfoOverlay.styl
+++ b/www/app/stylus/components/_playerInfoOverlay.styl
@@ -80,11 +80,11 @@
         }
     }
 
-    .close-btn, .right-btn {
+    .close-btn, .right-btn, .left-btn {
         background: rgba(2, 12, 28, .7);
         transform: skew(-10deg);
         position: absolute;
-        left: 17px;
+        left: 57px;
         top: -40px;
         width: 30px;
         height: 30px;
@@ -103,6 +103,10 @@
         top: auto;
         bottom: 0;
         right: -30px;
+    }
+
+    .left-btn {
+        left: 17px;
     }
 
     .player-modal {
