--- a/www/app/stylus/components/SecondLayer/_basketballOverlay.styl
+++ b/www/app/stylus/components/SecondLayer/_basketballOverlay.styl
@@ -1,7 +1,7 @@
 .basketball-overlay-home-name, .basketball-overlay-away-name {
     position: absolute;
     top: 15px;
-    left: 20px;
+    left: 5px;
     color: white;
     font-weight: bold;
     font-size: 21px;
@@ -10,13 +10,13 @@
 
 .basketball-overlay-away-name {
     left: auto;
-    right: 20px;
+    right: 5px;
 }
 
 .basketball-overlay-home-roster, .basketball-overlay-away-roster {
     position: absolute;
     top: 40px;
-    left: 20px;
+    left: 5px;
     height: 100%;
     color: white;
     text-shadow: 2px 2px 2px rgba(0, 0, 0, .4);
@@ -46,20 +46,25 @@
 
 .basketball-overlay-away-roster {
     left: auto;
-    right: 20px;
+    right: 5px;
     text-align: right;
     transform: translateX(120%);
 }
 
 .basketball-overlay-center {
-    position: absolute;
-    top: 20px;
-    color: white;
-    left: 50%;
-    transform: translateX(-50%);
-    text-align: center;
-    padding: 10px 15px;
-    background: rgba(0, 0, 0, .4);
+    position:absolute;
+    top:0;
+    left: 0;
+    color: rgba(255,255,255,0.8);
+    width:100%
+    text-align:center;
+
+    .background-box{
+        margin-top: 5px;
+        background: rgba(0, 0, 0, .4);
+        padding: 5px 10px;
+        display:inline-block;
+    }
 
     .vs {
         padding: 0 20px;
@@ -68,5 +73,12 @@
     .basketball-home, .basketball-away {
         font-weight: bold;
         font-size: 21px;
+
+        &.isOpen{
+            color: #fff;
+        }
+    }
+    .smaller .basketball-home, .smaller .basketball-away{
+        font-size:16px;
     }
 }
