LIVE-496 Genres should now fit, try2.

--- a/www/app/stylus/components/_channel-page.styl
+++ b/www/app/stylus/components/_channel-page.styl
@@ -10,6 +10,8 @@
         filter: drop-shadow(5px 5px 5px #222);
     .tile
         width:50%
+    .horizontalScrollInner
+        margin-top: -15px;
 
 .channelIcon
     font-size: 40px
@@ -21,7 +23,7 @@
 .inline-circle-label 
     .horizontalScroll 
         height:90px
-        padding-top:10px
+        padding-top:15px
         .scrollItem
             text-align: center
             color: #c7c7c7
